--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,8 @@ services:
     container_name: db
     image: postgres:15
     restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: bike_db
+    env_file:
+      - ./backend/.env
     ports:
       - "5488:5432"
     volumes:
