--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       uvicorn app.main:app
       --host 0.0.0.0
       --port 8000
-      --reload
+      --log-level info
 
   db:
     container_name: db
